# status-rollup

./: .gitignore  CMakeLists.txt  CONFIG_FORMAT.md  LICENSE  PUBLISHING.md  PYTHON.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  wheels.yml
examples/: basic_example.cpp  complex_status_config.json  python_example.py  status_config.json
include/status_rollup/: status.hpp  status_tree.hpp
python/: status_rollup_py.cpp
src/: rollup_rule.cpp  rollup_rule.hpp  status_node.cpp  status_node.hpp  status_tree.cpp
status_rollup/: __init__.py  __init__.pyi
tests/: test_integration.cpp  test_interactive.sh  test_python_bindings.py  test_python_structure.py  test_rollup_rules.cpp
